<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@drawable/bg_search"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edt_question"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/imv_clear"
                    android:background="@null"
                    android:drawableLeft="@drawable/icon_search"
                    android:drawablePadding="@dimen/margin_10dp"
                    android:hint="@string/question"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/margin_10dp"
                    android:paddingRight="@dimen/margin_10dp" />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_15dp"
            android:text="@string/suggestions_place" />

        <org.lucasr.twowayview.TwoWayView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:id="@+id/twv_domestic_place"
            style="@style/TwoWayView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_15dp"
            android:text="@string/suggestions_place_in_the_world" />

        <org.lucasr.twowayview.TwoWayView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:id="@+id/twv_world_place"
            style="@style/TwoWayView"/>


    </LinearLayout>


</ScrollView>


